# agent

./: .cursorignore  .env.example  .gitignore  README.en.md  README.md  install.sh  start.sh  stress_test.sh  test.sh
agent-mvp/: Makefile  README.md  (+4 more)
zero-agent/: Makefile  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
zero-agent/api/: __init__.py  app.py
zero-agent/config/: __init__.py  loader.py  models.py  settings.py  validator.py
zero-agent/config/agents/: default_agent.yaml
zero-agent/config/templates/: general_agent.yaml  risk_control_agent.yaml  weather_agent.yaml
zero-agent/core/: __init__.py  agent.py  circuit_breaker.py  factory.py  resource_manager.py  service_registry.py
zero-agent/docker/: Dockerfile
zero-agent/filters/: __init__.py  manager.py  metrics.py  middleware.py  types.py
zero-agent/filters/builtin/: __init__.py  audit.py  input_validation.py  output_processing.py
zero-agent/llm/: __init__.py  base.py  factory.py  openai_provider.py  siliconflow_provider.py
zero-agent/nexus_agent/filters/: __init__.py  manager.py  metrics.py  middleware.py  types.py
zero-agent/nexus_agent/filters/builtin/: __init__.py  audit.py  input_validation.py  output_processing.py
zero-agent/orchestration/: agent.py  state.py  workflow.py
zero-agent/scripts/: __init__.py  start.py
zero-agent/sdk/python/: __init__.py  sdk.py
zero-agent/skills/: __init__.py  base.py  loader.py  manager.py  parser.py  registry.py
zero-agent/tools/: base.py  executor.py  manager.py  registry.py
zero-agent/tools/mcp/: client.py  tool.py
(+142 files in other folders)
